Fixed stress summary overlap bug

--- a/src/app/sidepanel/sidepanel.component.css
+++ b/src/app/sidepanel/sidepanel.component.css
@@ -344,7 +344,7 @@ meter::-moz-meter-bar {
     /* font-family: 'Roboto', 'arial', sans-serif; */
     font-size: 24px;
     color: #7fba02;
-    z-index: 1;
+    z-index: 10;
     stroke-linecap: round;
 }
 /*Text centering*/
